Use new switch and pattern matching, fix deprecations